[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# Use this profile for profiling with e.g. cargo-flamegraph
[profile.debug_release]
inherits = "release"
strip = false
debug = true

[patch.crates-io]
# Contains unstable fixes that we need.
logos = { git = "https://github.com/elenakrittik/logos", rev = "148b6a0" }
# logos = { path = "../logos" } # you didn't see this, okay?
