[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# Use this profile for profiling with e.g. cargo-flamegraph
[profile.debug_release]
inherits = "release"
strip = false
debug = true

[patch.crates-io]
# Contains unstable fixes that we need.
logos = { git = "https://github.com/elenakrittik/logos", rev = "d79f8e736239fb5e6b972a54463095d44bc494bc" }
# logos = { path = "../logos" } # you didn't see this, okay?
