[project]
name = "gdtk"
version = "0.1.0"
description = ""
authors = [
    { name = "ItsAleph", email = "igorekkrupskij@gmail.com" },
]
dependencies = [
    "typer[all]>=0.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
gdtk = "gdtk.__main__:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
