[package]
name = "diagnosis"
version = "0.1.0"
edition = "2021"

[dependencies]
yansi = { version = "1.0.1", features = ["hyperlink"], optional = true }
thiserror = { version = "1.0", optional = true }
ahash = { version = "0.8.11", optional = true }
count-digits = { version = "0.5.1", optional = true }

[features]
rustc = ["dep:yansi", "dep:thiserror", "dep:ahash", "dep:count-digits"]
