[package]
name = "diagnosis"
version = "0.1.0"
edition = "2021"

[dependencies]
# `RustcVisualizer`
yansi = { version = "1.0.1", features = ["hyperlink"], optional = true }
thiserror = { version = "2.0", optional = true }
ahash = { version = "0.8.11", optional = true }
count-digits = { version = "0.5.1", optional = true }

# `MietteVisualizer`
miette = { version = "7.4.0", features = [
    "fancy-no-backtrace",
], default-features = false, optional = true }

# `CodespanVisualizer`
codespan-reporting = { version = "0.11.1", optional = true }

[features]
rustc = ["dep:yansi", "dep:thiserror", "dep:ahash", "dep:count-digits"]
miette = ["dep:miette", "dep:thiserror"]
codespan-reporting = ["dep:codespan-reporting"]
