[package]
name = "gdtk-dialoguer"
description = "A command line prompting library."
version = "0.11.0"
edition = "2021"
rust-version = "1.63.0"
authors = [
	"Armin Ronacher <armin.ronacher@active-4.com>",
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
keywords = ["cli", "menu", "prompt"]
categories = ["command-line-interface"]
license = "MIT"
homepage = "https://github.com/elenakrittik/gdtk/tree/master/crates/gdtk-dialoguer"
repository = "https://github.com/elenakrittik/gdtk"
documentation = "https://docs.rs/gdtk-dialoguer"
readme = "README.md"

[features]
default = ["editor", "password"]
editor = ["tempfile"]
fuzzy-select = ["fuzzy-matcher"]
history = []
password = ["zeroize"]
completion = []

[dependencies]
console = "0.15.0"
tempfile = { version = "3", optional = true }
zeroize = { version = "1.1.1", optional = true }
fuzzy-matcher = { version = "0.3.7", optional = true }
shell-words = "1.1.0"
thiserror = "1.0.40"
