[package]
name = "gdtk-gvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdtk-paths = { version = "0.1.0", path = "../gdtk-paths" }
serde = "1.0.214"
thiserror = "2.0.3"
versions = "6.0.0"
tabled = "0.16.0"
cynic = { version = "3.8.0", default-features = false }
ureq = { version = "3.0.0-rc1", features = ["json"] }
rkyv = "0.8.8"
cliui = { path = "../cliui", optional = true }

[build-dependencies]
cynic-codegen = { version = "3.9.0", features = ["rkyv"] }

[features]
default = []
cliui = ["dep:cliui"]
