[package]
name = "gdtk-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdtk-diag = { version = "0.1.0", path = "../gdtk-diag" }
logos = "0.14.0"
thiserror = "1.0.43"
enum-as-inner = "0.6.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
