[package]
name = "gdtk-lint"
version = "0.1.0"
edition = "2021"

[dependencies]
trustfall = "0.7.1"
gdtk-gdscript-trustfall-adapter = { path = "../gdtk-gdscript-trustfall-adapter", version = "0.1.0" }
gdtk-ast = { path = "../gdtk-ast", version = "0.1.0" }
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
