[package]
name = "gdtk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
diagnosis = { version = "0.1.0", path = "../diagnosis", features = ["codespan-reporting"] }
gdtk-gvm = { version = "0.1.0", path = "../gdtk-gvm", features = ["cliui"] }
cliui = { version = "0.1.0", path = "../cliui" }
gdtk-lint = { version = "0.1.0", path = "../gdtk-lint" }
gdtk-godotcfg-parser = { version = "0.1.0", path = "../gdtk-godotcfg-parser" }
gdtk-gdscript-parser = { version = "0.1.0", path = "../gdtk-gdscript-parser" }
gdtk-paths = { version = "0.1.0", path = "../gdtk-paths" }
zip = { version = "2.2.1", default-features = false, features = [
    "deflate",
] }
itertools = "0.13.0"
ureq = "3.0.0-rc1"
tabled = { version = "0.17.0", features = ["std"] }
spinoff = { version = "0.8.0", features = ["dots2"], default-features = false }
ignore = { version = "0.4.22", features = ["simd-accel"] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "ansi", "smallvec", "parking_lot"] }
tracing-appender = "0.2.3"
tapcli = { version = "0.1.0", path = "../tapcli" }
extend = "1.2.0"

[features]
dev = []

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
